k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-app-service
  namespace: php-app
  labels:
    app: php-app
spec:
  type: ClusterIP
  selector:
    app: php-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
